Continued work on the new GiRaFFE thorn.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -40,6 +40,7 @@
     "#Step 0: Set the spatial dimension parameter to 3.\n",
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
+    "par.set_parval_from_str(\"grid::GridFuncMemAccess\",\"ETK\")\n",
     "par.set_parval_from_str(\"outputC::outCverbose\",False) \n",
     "\n",
     "# Step 1: Set the finite differencing order to 4.\n",
@@ -52,6 +53,9 @@
     "\n",
     "# Step 2: Create the C code output kernel.\n",
     "Prereqs_to_print = [\\\n",
+    "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"uU0\"),rhs=gho.uU[0]),\\\n",
+    "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"uU1\"),rhs=gho.uU[1]),\\\n",
+    "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"uU2\"),rhs=gho.uU[2]),\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"alphau0\"),rhs=gho.alphau0),\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"alpsqrtgam\"),rhs=gho.alpsqrtgam),\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AevolParen\"),rhs=gho.AevolParen),\\\n",
@@ -73,9 +77,8 @@
     "Prereqs_CKernel = fin.FD_outputC(\"returnstring\",Prereqs_to_print)\n",
     "Conservs_CKernel = fin.FD_outputC(\"returnstring\",Conservs_to_print)\n",
     "\n",
-    "Prereqs_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"cctk_nghostzones[2]\",\"cctk_nghostzones[1]\",\"cctk_nghostzones[0]\"],\\\n",
-    "                           [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\\\n",
-    "                            \"cctk_lsh[0]-cctk_nghostzones[0]\"],\\\n",
+    "Prereqs_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\\\n",
+    "                           [\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
     "                           [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
     "                           Prereqs_CKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
@@ -226,7 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing GiRaFFE_HO/src/GiRaFFE.c\n"
+      "Overwriting GiRaFFE_HO/src/GiRaFFE.c\n"
      ]
     }
    ],
@@ -342,6 +345,58 @@
     "    }\n",
     "}\n",
     "\n",
+    "void GiRaFFE_HO_calc_prereqs(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "                             const CCTK_REAL invdx0,const CCTK_REAL invdx1,const CCTK_REAL invdx2,\n",
+    "                             const CCTK_REAL *alphaGF, const CCTK_REAL *betaU0GF, const CCTK_REAL *betaU1GF, const CCTK_REAL *betaU2GF,\n",
+    "                             const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
+    "                             const CCTK_REAL *ValenciavU0GF, const CCTK_REAL *ValenciavU1GF, const CCTK_REAL *ValenciavU2GF,\n",
+    "                             const CCTK_REAL *ADU0GF,const CCTK_REAL *ADU1GF,const CCTK_REAL *ADU2GF,const CCTK_REAL psi6PhiGF,\n",
+    "                             CCTK_REAL *uU0GF, CCTK_REAL *uU1GF, CCTK_REAL *uU2GF,\n",
+    "                             CCTK_REAL *alphau0GF, CCTK_REAL *alpsqrtgamGF, CCTK_REAL AevolParenGF,\n",
+    "                             CCTK_REAL *PevolParenU0GF,CCTK_REAL *PevolParenU1GF,CCTK_REAL *PevolParenU2GF) {\n",
+    "\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "#include \"Prereqs.h\" \n",
+    "\n",
+    "}\n",
+    "\n",
+    "void GiRaFFE_HO_calc_rhs(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "                         const CCTK_REAL invdx0,const CCTK_REAL invdx1,const CCTK_REAL invdx2,\n",
+    "                         const CCTK_REAL *alphaGF, const CCTK_REAL *betaU0GF, const CCTK_REAL *betaU1GF, const CCTK_REAL *betaU2GF,\n",
+    "                         const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
+    "                         const CCTK_REAL *ValenciavU0GF, const CCTK_REAL *ValenciavU1GF, const CCTK_REAL *ValenciavU2GF, \n",
+    "                         const CCTK_REAL *uU0GF, const CCTK_REAL *uU1GF, const CCTK_REAL *uU2GF, \n",
+    "                         const CCTK_REAL *ADU0GF,const CCTK_REAL *ADU1GF,const CCTK_REAL *ADU2GF,\n",
+    "                         const CCTK_REAL *alphau0GF, const CCTK_REAL *alpsqrtgamGF, const CCTK_REAL AevolParenGF,\n",
+    "                         const CCTK_REAL *PevolParenU0GF,const CCTK_REAL *PevolParenU1GF,const CCTK_REAL *PevolParenU2GF,\n",
+    "                         CCTK_REAL *Stilde_rhsD0GF, CCTK_REAL *Stilde_rhsD1GF, CCTK_REAL *Stilde_rhsD2GF,\n",
+    "                         CCTK_REAL *A_rhsD0GF, CCTK_REAL *A_rhsD1GF, CCTK_REAL *A_rhsD2GF, CCTK_REAL *psi6Phi_rhsGF) {\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "#include \"Conservs.h\"\n",
+    "\n",
+    "}\n",
+    "\n",
+    "void GiRaFFE_HO_set_prereqs(CCTK_ARGUMENTS) {\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  \n",
+    "  const CCTK_REAL invdx0 = 1.0 / (CCTK_DELTA_SPACE(0));\n",
+    "  const CCTK_REAL invdx1 = 1.0 / (CCTK_DELTA_SPACE(1));\n",
+    "  const CCTK_REAL invdx2 = 1.0 / (CCTK_DELTA_SPACE(2));\n",
+    "  \n",
+    "  GiRaFFE_HO_calc_prereqs(cctkGH,cctk_lsh,cctk_nghostzones,\n",
+    "                          invdx0, invdx1, invdx0,\n",
+    "                          alp, betax, betay, betaz,\n",
+    "                          gxx, gxy, gxz, gyy, gyz, gzz,\n",
+    "                          ValenciavU0, ValenciavU1, ValenciavU2,\n",
+    "                          ADU0, ADU1, ADU2, psi6Phi,\n",
+    "                          uU0, uU1, uU2,\n",
+    "                          alphau0, alpsqrtgam, AevolParen,\n",
+    "                          PevolParenU0, PevolParenU1, PevolParenU2);\n",
+    "}\n",
+    "\n",
     "void GiRaFFE_HO_set_rhs(CCTK_ARGUMENTS) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
@@ -349,16 +404,18 @@
     "  const CCTK_REAL invdx0 = 1.0 / (CCTK_DELTA_SPACE(0));\n",
     "  const CCTK_REAL invdx1 = 1.0 / (CCTK_DELTA_SPACE(1));\n",
     "  const CCTK_REAL invdx2 = 1.0 / (CCTK_DELTA_SPACE(2));\n",
-    "  const CCTK_REAL *gammaDD00GF = gxx;\n",
-    "  const CCTK_REAL *gammaDD01GF = gxy;\n",
-    "  const CCTK_REAL *gammaDD02GF = gxz;\n",
-    "  const CCTK_REAL *gammaDD11GF = gyy;\n",
-    "  const CCTK_REAL *gammaDD12GF = gyz;\n",
-    "  const CCTK_REAL *gammaDD22GF = gzz;\n",
     "  \n",
-    "#include \"Prereqs.h\" \n",
-    "    \n",
-    "#include \"Conservs.h\"\n",
+    "  GiRaFFE_HO_calc_rhs(cctkGH,cctk_lsh,cctk_nghostzones,\n",
+    "                      invdx0, invdx1, invdx0,\n",
+    "                      alp, betax, betay, betaz,\n",
+    "                      gxx, gxy, gxz, gyy, gyz, gzz,\n",
+    "                      ValenciavU0, ValenciavU1, ValenciavU2,\n",
+    "                      uU0, uU1, uU2,\n",
+    "                      ADU0, ADU1, ADU2, psi6Phi,\n",
+    "                      alphau0, alpsqrtgam, AevolParen,\n",
+    "                      PevolParenU0, PevolParenU1, PevolParenU2\n",
+    "                      Stilde_rhsD0, Stilde_rhsD1, Stilde_rhsD2,\n",
+    "                      A_rhsD0, A_rhsD1, A_rhsD2, psi6Phi_rhs);\n",
     "}\n",
     "\n",
     "/* Boundary Condition code adapted from WaveToyC thorn in ETK, implementing built-in\n",
@@ -417,7 +474,7 @@
     "    CCTK_WARN (0, \"GiRaFFE_HO_Boundaries: Error selecting boundary condition\");\n",
     "  }\n",
     "  if (bctype && Boundary_SelectVarForBC (cctkGH, CCTK_ALL_FACES, 1, -1,\n",
-    "                                         \"GiRaFFE_HO::psi6Phi\", bctype) < 0)\n",
+    "                                         \"GiRaFFE_HO::psi6Phi_rhs\", bctype) < 0)\n",
     "  {\n",
     "    CCTK_WARN (0, \"GiRaFFE_HO_Boundaries: Error selecting boundary condition\");\n",
     "  }\n",
@@ -433,12 +490,21 @@
     "  sym[1] = 1;\n",
     "  sym[2] = 1;\n",
     "\n",
-    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::Psitilde_rhsD0\");\n",
-    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::Psitilde_rhsD1\");\n",
-    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::Psitilde_rhsD2\");\n",
-    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::A_rhsD0\");\n",
-    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::A_rhsD1\");\n",
-    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::A_rhsD2\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::uU0\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::uU1\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::uU2\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::alphau0\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::alpsqrtgam\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::AevolParen\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::PevolParenU0\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::PevolParenU1\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::PevolParenU2\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::PsitildeD0\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::PsitildeD1\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::PsitildeD2\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::AD0\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::AD1\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::AD2\");\n",
     "  SetCartSymVN(cctkGH, sym,\"GiRaFFE_HO::psi6Phi\");\n",
     "\n",
     "  return;\n",
@@ -452,6 +518,12 @@
     "  CCTK_INT ierr CCTK_ATTRIBUTE_UNUSED = 0;\n",
     "  /* Register all the evolved grid functions with MoL */\n",
     "  ierr += MoLRegisterEvolved(CCTK_VarIndex(\"GiRaFFE_HO::PsitildeD0\"),  CCTK_VarIndex(\"GiRaFFE_HO::Psitilde_rhsD0\"));\n",
+    "  ierr += MoLRegisterEvolved(CCTK_VarIndex(\"GiRaFFE_HO::PsitildeD1\"),  CCTK_VarIndex(\"GiRaFFE_HO::Psitilde_rhsD1\"));\n",
+    "  ierr += MoLRegisterEvolved(CCTK_VarIndex(\"GiRaFFE_HO::PsitildeD2\"),  CCTK_VarIndex(\"GiRaFFE_HO::Psitilde_rhsD2\"));\n",
+    "  ierr += MoLRegisterEvolved(CCTK_VarIndex(\"GiRaFFE_HO::AD0\"),  CCTK_VarIndex(\"GiRaFFE_HO::A_rhsD0\"));\n",
+    "  ierr += MoLRegisterEvolved(CCTK_VarIndex(\"GiRaFFE_HO::AD1\"),  CCTK_VarIndex(\"GiRaFFE_HO::A_rhsD1\"));\n",
+    "  ierr += MoLRegisterEvolved(CCTK_VarIndex(\"GiRaFFE_HO::AD2\"),  CCTK_VarIndex(\"GiRaFFE_HO::A_rhsD2\"));\n",
+    "  ierr += MoLRegisterEvolved(CCTK_VarIndex(\"GiRaFFE_HO::psi6Phi\"),  CCTK_VarIndex(\"GiRaFFE_HO::psi6Phi_rhs\"));\n",
     "  /* Register all the evolved Array functions with MoL */\n",
     "  return;\n",
     "}"
@@ -510,13 +582,19 @@
     "public:\n",
     "cctk_real GiRaFFE_aux type = GF Timelevels=1 tags='tensortypealias=\"Scalar\"'\n",
     "{\n",
-    "  alphau0,alpsqrtgam,AevolParen,PevolParenU0,PevolParenU1,PevolParenU2\n",
+    "  uU0,uU1,uU2,alphau0,alpsqrtgam,AevolParen,PevolParenU0,PevolParenU1,PevolParenU2\n",
     "} \"The evolved scalar fields\"\n",
     "\n",
     "public:\n",
     "cctk_real GiRaFFE_rhs type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
     "{\n",
-    "  Stilde_rhsD0,Stilde_rhsD1,Stilde_rhsD2,A_rhsD0,A_rhsD1,A_rhsD2,psi6Phi\n",
+    "  Stilde_rhsD0,Stilde_rhsD1,Stilde_rhsD2,A_rhsD0,A_rhsD1,A_rhsD2,psi6Phi_rhs\n",
+    "} \"The evolved scalar fields\"\n",
+    "\n",
+    "public:\n",
+    "cctk_real GiRaFFE_rhs type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
+    "{\n",
+    "  StildeD0,StildeD1,StildeD2,AD0,AD1,AD2,psi6Phi\n",
     "} \"The evolved scalar fields\"\n"
    ]
   },
@@ -598,16 +676,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: %%writefile is a cell magic, but the cell body is empty.\n"
+      "Overwriting GiRaFFE_HO/schedule.ccl\n"
      ]
     }
    ],
    "source": [
     "%%writefile GiRaFFE_HO/schedule.ccl\n",
     "STORAGE: GiRaFFE_rhs[timelevels]\n",
+    "STORAGE: GiRaFFE_vars[timelevels]\n",
     "STORAGE: GiRaFFE_aux[timelevels]\n",
     "\n",
     "schedule GiRaFFE_HO_InitSymBound at BASEGRID\n",
@@ -616,16 +695,73 @@
     "  OPTIONS: global\n",
     "} \"Schedule symmetries\"\n",
     "\n",
-    "schedule GiRaFFE_HO_set_rhs as WaveToy_Evolution IN MoL_CalcRHS\n",
+    "schedule GiRaFFE_HO_set_prereqs as WaveToy_Evolution IN MoL_CalcRHS\n",
     "{\n",
     "  LANG: C\n",
+    "  READS: admbase::alp(Everywhere)\n",
+    "  READS: admbase::betax(Everywhere)\n",
+    "  READS: admbase::betay(Everywhere)\n",
+    "  READS: admbase::betaz(Everywhere)\n",
     "  READS: admbase::gxx(Everywhere)\n",
     "  READS: admbase::gxy(Everywhere)\n",
     "  READS: admbase::gxz(Everywhere)\n",
     "  READS: admbase::gyy(Everywhere)\n",
     "  READS: admbase::gyz(Everywhere)\n",
     "  READS: admbase::gzz(Everywhere)\n",
-    "} \"Evolution of Maxwell's equations\"\n",
+    "  READS: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::psi6Phi(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::uU0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::uU1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::uU2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::alphau0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::alpsqrtgam(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::AevolParen(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::PevolParenU0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::PevolParenU1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::PevolParenU2(Everywhere)\n",
+    "}\n",
+    "\n",
+    "schedule GiRaFFE_HO_set_rhs as WaveToy_Evolution IN MoL_CalcRHS after GiRaFFE_HO_set_prereqs\n",
+    "{\n",
+    "  LANG: C\n",
+    "  READS: admbase::alp(Everywhere)\n",
+    "  READS: admbase::betax(Everywhere)\n",
+    "  READS: admbase::betay(Everywhere)\n",
+    "  READS: admbase::betaz(Everywhere)\n",
+    "  READS: admbase::gxx(Everywhere)\n",
+    "  READS: admbase::gxy(Everywhere)\n",
+    "  READS: admbase::gxz(Everywhere)\n",
+    "  READS: admbase::gyy(Everywhere)\n",
+    "  READS: admbase::gyz(Everywhere)\n",
+    "  READS: admbase::gzz(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::uU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::uU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::uU2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::alphau0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::alpsqrtgam(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AevolParen(Everywhere)\n",
+    "  READS: GiRaFFE_HO::PevolParenU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::PevolParenU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::PevolParenU2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::Stilde_rhsD0(Interior)\n",
+    "  WRITES: GiRaFFE_HO::Stilde_rhsD1(Interior)\n",
+    "  WRITES: GiRaFFE_HO::Stilde_rhsD2(Interior)\n",
+    "  WRITES: GiRaFFE_HO::A_rhsD0(Interior)\n",
+    "  WRITES: GiRaFFE_HO::A_rhsD1(Interior)\n",
+    "  WRITES: GiRaFFE_HO::A_rhsD2(Interior)\n",
+    "  WRITES: GiRaFFE_HO::psi6Phi_rhs(Interior)\n",
+    "} \"Sets the GiRaFFE right-hand sides\"\n",
     "\n",
     "schedule GiRaFFE_HO_SelectBCs in MoL_PostStep\n",
     "{\n",
@@ -668,7 +804,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing GiRaFFE_HO/src/make.code.defn\n"
+      "Overwriting GiRaFFE_HO/src/make.code.defn\n"
      ]
     }
    ],
