--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -86,7 +86,10 @@
     "                       [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
     "                                      \"const REAL invdx1 = 1.0/dxx[1];\\n\"+\n",
     "                                      \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
-    "                                      \"#pragma omp parallel for\",\"\",\"\"],\"\",RHSstring))"
+    "                                      \"#pragma omp parallel for\",\n",
+    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
+    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
+    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+RHSstring))"
    ]
   },
   {
@@ -104,6 +107,9 @@
     }
    ],
    "source": [
+    "with open(\"ScalarWaveCurvilinear/xxminmax.h\", \"w\") as file:\n",
+    "    file.write(\"const int xxmin[3] = {\"+str(rfm.xxmin[0])+\",\"+str(rfm.xxmin[1])+\",\"+str(rfm.xxmin[2])+\"};\\n\")\n",
+    "    file.write(\"const int xxmax[3] = {\"+str(rfm.xxmax[0])+\",\"+str(rfm.xxmax[1])+\",\"+str(rfm.xxmax[2])+\"};\\n\")\n",
     "outputC([rfm.xxCart[0],rfm.xxCart[1],rfm.xxCart[2]],[\"xx_to_Cart0\",\"xx_to_Cart1\",\"xx_to_Cart2\"],\n",
     "        \"ScalarWaveCurvilinear/xxCart.h\")\n",
     "outputC([rfm.Cart_to_xx[0],rfm.Cart_to_xx[1],rfm.Cart_to_xx[2]],\n",
