Tutorial-Start_to_Finish-ScalarWave: Fix a minor bug

--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -241,9 +241,9 @@
     "  const REAL xxmin[3] = {-10.,-10.,-10. };\n",
     "  const REAL xxmax[3] = { 10., 10., 10. };\n",
     "  //          ... and then set up the numerical grid structure in time:\n",
-    "  const int t_final = xxmax[0]*0.8; // Final time is set so that at t=t_final, \n",
-    "                                    // data at the origin have not been corrupted \n",
-    "                                    // by the approximate outer boundary condition\n",
+    "  const REAL t_final = xxmax[0]*0.8; /* Final time is set so that at t=t_final, \n",
+    "                                        data at the origin have not been corrupted \n",
+    "                                        by the approximate outer boundary condition */\n",
     "  const REAL CFL_FACTOR = 0.5; // Set the CFL Factor\n",
     "\n",
     "  // Step 0c: Allocate memory for gridfunctions\n",
@@ -348,9 +348,9 @@
    "outputs": [],
    "source": [
     "!cd ScalarWave/\n",
-    "!gcc -O2 -march=native ScalarWave/ScalarWave_Playground.c -o ScalarWave_Playground -lm\n",
-    "!./ScalarWave_Playground 48 > out48.txt\n",
-    "!./ScalarWave_Playground 64 > out64.txt"
+    "!gcc -Ofast -march=native -ftree-parallelize-loops=2 ScalarWave/ScalarWave_Playground.c -o ScalarWave_Playground -lm\n",
+    "!taskset -c 0,1 ./ScalarWave_Playground 48 > out48.txt\n",
+    "!taskset -c 0,1 ./ScalarWave_Playground 64 > out64.txt"
    ]
   },
   {
