--- a/Tutorial-GRMHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRMHD_Equations-Cartesian.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -95,11 +95,11 @@
      "text": [
       "/*\n",
       " *  Original SymPy expression:\n",
-      " *  \"dotProduct = mi.betaX*u1[0]*u2[1] + mi.betaX*u1[1]*u2[0] + mi.betaY*u1[0]*u2[2] + mi.betaY*u1[2]*u2[0] + mi.betaZ*u1[0]*u2[3] + mi.betaZ*u1[3]*u2[0] + mi.gamxx*u1[1]*u2[1] + mi.gamxy*u1[1]*u2[2] + mi.gamxy*u1[2]*u2[1] + mi.gamxz*u1[1]*u2[3] + mi.gamxz*u1[3]*u2[1] + mi.gamyy*u1[2]*u2[2] + mi.gamyz*u1[2]*u2[3] + mi.gamyz*u1[3]*u2[2] + mi.gamzz*u1[3]*u2[3] + u1[0]*u2[0]*(-mi.alpha**2 + mi.betaX**2*mi.gamxx + 2*mi.betaX*mi.betaY*mi.gamxy + 2*mi.betaX*mi.betaZ*mi.gamxz + mi.betaY**2*mi.gamyy + 2*mi.betaY*mi.betaZ*mi.gamyz + mi.betaZ**2*mi.gamzz)\"\n",
+      " *  \"dotProduct = mi.betaX*u1[0]*u2[1] + mi.betaX*u1[1]*u2[0] + mi.betaY*u1[0]*u2[2] + mi.betaY*u1[2]*u2[0] + mi.betaZ*u1[0]*u2[3] + mi.betaZ*u1[3]*u2[0] + mi.gamDDxx*u1[1]*u2[1] + mi.gamDDxy*u1[1]*u2[2] + mi.gamDDxy*u1[2]*u2[1] + mi.gamDDxz*u1[1]*u2[3] + mi.gamDDxz*u1[3]*u2[1] + mi.gamDDyy*u1[2]*u2[2] + mi.gamDDyz*u1[2]*u2[3] + mi.gamDDyz*u1[3]*u2[2] + mi.gamDDzz*u1[3]*u2[3] + u1[0]*u2[0]*(-mi.alpha**2 + mi.betaX**2*mi.gamDDxx + 2*mi.betaX*mi.betaY*mi.gamDDxy + 2*mi.betaX*mi.betaZ*mi.gamDDxz + mi.betaY**2*mi.gamDDyy + 2*mi.betaY*mi.betaZ*mi.gamDDyz + mi.betaZ**2*mi.gamDDzz)\"\n",
       " */\n",
       "{\n",
       "   const double tmp0 = 2*mi.betaX;\n",
-      "   dotProduct = mi.betaX*u1[0]*u2[1] + mi.betaX*u1[1]*u2[0] + mi.betaY*u1[0]*u2[2] + mi.betaY*u1[2]*u2[0] + mi.betaZ*u1[0]*u2[3] + mi.betaZ*u1[3]*u2[0] + mi.gamxx*u1[1]*u2[1] + mi.gamxy*u1[1]*u2[2] + mi.gamxy*u1[2]*u2[1] + mi.gamxz*u1[1]*u2[3] + mi.gamxz*u1[3]*u2[1] + mi.gamyy*u1[2]*u2[2] + mi.gamyz*u1[2]*u2[3] + mi.gamyz*u1[3]*u2[2] + mi.gamzz*u1[3]*u2[3] + u1[0]*u2[0]*(-pow(mi.alpha, 2) + pow(mi.betaX, 2)*mi.gamxx + pow(mi.betaY, 2)*mi.gamyy + 2*mi.betaY*mi.betaZ*mi.gamyz + mi.betaY*mi.gamxy*tmp0 + pow(mi.betaZ, 2)*mi.gamzz + mi.betaZ*mi.gamxz*tmp0);\n",
+      "   dotProduct = mi.betaX*u1[0]*u2[1] + mi.betaX*u1[1]*u2[0] + mi.betaY*u1[0]*u2[2] + mi.betaY*u1[2]*u2[0] + mi.betaZ*u1[0]*u2[3] + mi.betaZ*u1[3]*u2[0] + mi.gamDDxx*u1[1]*u2[1] + mi.gamDDxy*u1[1]*u2[2] + mi.gamDDxy*u1[2]*u2[1] + mi.gamDDxz*u1[1]*u2[3] + mi.gamDDxz*u1[3]*u2[1] + mi.gamDDyy*u1[2]*u2[2] + mi.gamDDyz*u1[2]*u2[3] + mi.gamDDyz*u1[3]*u2[2] + mi.gamDDzz*u1[3]*u2[3] + u1[0]*u2[0]*(-pow(mi.alpha, 2) + pow(mi.betaX, 2)*mi.gamDDxx + pow(mi.betaY, 2)*mi.gamDDyy + 2*mi.betaY*mi.betaZ*mi.gamDDyz + mi.betaY*mi.gamDDxy*tmp0 + pow(mi.betaZ, 2)*mi.gamDDzz + mi.betaZ*mi.gamDDxz*tmp0);\n",
       "}\n"
      ]
     }
@@ -122,7 +122,7 @@
     "components = [\"xx\", \"xy\", \"xz\", \"yy\", \"yz\", \"zz\"]\n",
     "names = \"\"\n",
     "for comp in components : \n",
-    "    names = names + \"mi.gam{0} \".format(comp)\n",
+    "    names = names + \"mi.gamDD{0} \".format(comp)\n",
     "\n",
     "gxx, gxy, gxz, gyy, gyz, gzz = sp.symbols( names)\n",
     "\n",
@@ -198,7 +198,70 @@
     "\\lapse^{-2}\\beta^j & \\gamma^{ij} - \\lapse^{-2} \\beta^i\\beta^j\n",
     "\\end{pmatrix}\n",
     "\\end{equation}\n",
-    "We will need the full form in a bit, but for now we note that $\\tau = \\lapse^2\\rtgamma T^{00} - \\rhostar$, which gives\n",
+    "Lets get the form of this in code:\n",
+    "\n",
+    "The main challenge is the calculation of the inverse of the 3x3 matrix $\\gamma_{ij}$.  To do so we note:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/*\n",
+      " *  Original SymPy expressions:\n",
+      " *  \"[mi.gamUUxx = (mi.gamDDyy*mi.gamDDzz - mi.gamDDyz**2)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy),\n",
+      " *    mi.gamUUxy = (-mi.gamDDxy*mi.gamDDzz + mi.gamDDxz*mi.gamDDyz)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy),\n",
+      " *    mi.gamUUxz = (mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy),\n",
+      " *    mi.gamUUyy = (mi.gamDDxx*mi.gamDDzz - mi.gamDDxz**2)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy),\n",
+      " *    mi.gamUUyz = (-mi.gamDDxx*mi.gamDDyz + mi.gamDDxy*mi.gamDDxz)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy),\n",
+      " *    mi.gamUUzz = (mi.gamDDxx*mi.gamDDyy - mi.gamDDxy**2)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy),\n",
+      " *    mi.rtDetGamma = (mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy)**0.5]\"\n",
+      " */\n",
+      "{\n",
+      "   const double tmp0 = pow(mi.gamDDyz, 2);\n",
+      "   const double tmp1 = mi.gamDDxx*mi.gamDDyy;\n",
+      "   const double tmp2 = mi.gamDDxy*mi.gamDDxz;\n",
+      "   const double tmp3 = pow(mi.gamDDxy, 2);\n",
+      "   const double tmp4 = pow(mi.gamDDxz, 2);\n",
+      "   const double tmp5 = -mi.gamDDxx*tmp0 - mi.gamDDyy*tmp4 + 2*mi.gamDDyz*tmp2 + mi.gamDDzz*tmp1 - mi.gamDDzz*tmp3;\n",
+      "   const double tmp6 = 1.0/tmp5;\n",
+      "   mi.gamUUxx = tmp6*(mi.gamDDyy*mi.gamDDzz - tmp0);\n",
+      "   mi.gamUUxy = tmp6*(-mi.gamDDxy*mi.gamDDzz + mi.gamDDxz*mi.gamDDyz);\n",
+      "   mi.gamUUxz = tmp6*(mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy);\n",
+      "   mi.gamUUyy = tmp6*(mi.gamDDxx*mi.gamDDzz - tmp4);\n",
+      "   mi.gamUUyz = tmp6*(-mi.gamDDxx*mi.gamDDyz + tmp2);\n",
+      "   mi.gamUUzz = tmp6*(tmp1 - tmp3);\n",
+      "   mi.rtDetGamma = sqrt(tmp5);\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import indexedexp as ixp\n",
+    "gammaUU, gammabarDet = ixp.symm_matrix_inverter3x3(gammaDD)\n",
+    "gUUxx = gammaUU[0][0]\n",
+    "gUUxy = gammaUU[0][1]\n",
+    "gUUxz = gammaUU[0][2]\n",
+    "gUUyy = gammaUU[1][1]\n",
+    "gUUyz = gammaUU[1][2]\n",
+    "gUUzz = gammaUU[2][2]\n",
+    "rtDetGamma = gammabarDet**0.5\n",
+    "\n",
+    "str = outputC( [gUUxx,gUUxy,gUUxz,gUUyy,gUUyz,gUUzz, rtDetGamma], [\"mi.gamUUxx\", \"mi.gamUUxy\",\"mi.gamUUxz\",\"mi.gamUUyy\",\"mi.gamUUyz\",\"mi.gamUUzz\",\"mi.rtDetGamma\"], filename=\"returnstring\")\n",
+    "print str\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now note that $\\tau = \\lapse^2\\rtgamma T^{00} - \\rhostar$, which gives\n",
     "\\begin{equation}\n",
     "\\tau = \\lapse\\rhostar h u^0 - P\\rtgamma - \\rhostar\n",
     "\\end{equation}\n",
@@ -208,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -455,28 +518,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   },
   "nteract": {
    "version": "nteract-on-jupyter@1.9.7"
