Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb: Work on documentation

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -21,6 +21,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1 of 2: Call on NRPy+ to output needed C code for initial data and scalar wave RHSs\n",
+    "\n",
+    "We choose simple plane wave initial data, which is documented in the [Cartesian scalar wave module](Tutorial-ScalarWave.ipynb). Specifically, we implement monochromatic (single-wavelength) wave traveling in the $\\hat{k}$ direction with speed $c$\n",
+    "$$u(\\vec{x},t) = f(\\hat{k}\\cdot\\vec{x} - c t),$$\n",
+    "where $\\hat{k}$ is a unit vector.\n",
+    "\n",
+    "The scalar wave RHSs in curvilinear coordinates (documented [in the previous module](Tutorial-ScalarWaveCurvilinear.ipynb)) are simply the right-hand sides of the scalar wave equation written in curvilinear coordinates\n",
+    "\\begin{align}\n",
+    "\\partial_t u &= v \\\\\n",
+    "\\partial_t v &= c^2 \\left(\\hat{g}^{ij} \\partial_{i} \\partial_{j} u - \\hat{\\Gamma}^i \\partial_i u\\right),\n",
+    "\\end{align}\n",
+    "where $\\hat{g}^{ij}$ is the inverse reference 3-metric (i.e., the metric corresponding to the underlying coordinate system we choose$-$spherical coordinates in our example below), and $\\hat{\\Gamma}^i$ is the contracted Christoffel symbol $\\hat{\\Gamma}^\\tau = \\hat{g}^{\\mu\\nu} \\hat{\\Gamma}^\\tau_{\\mu\\nu}$.\n",
+    "\n",
+    "Below we generate \n",
+    "+ the initial data by calling InitialData_PlaneWave() inside the NRPy+ [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py) module (documented in [this NRPy+ Jupyter notebook](Tutorial-ScalarWave.ipynb)), and \n",
+    "+ the RHS expressions by calling ScalarWaveCurvilinear_RHSs() inside the NRPy+ [ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py](../edit/ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py) module (documented in [this NRPy+ Jupyter notebook](Tutorial-ScalarWaveCurvilinear.ipynb))."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -93,6 +115,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1 of 2, continued: Output quantities related to reference metric\n",
+    "\n",
+    "There are several subtleties when generalizing the [start-to-finish scalar wave tutorial in Cartesian coordinates](Tutorial-Start_to_Finish-ScalarWave.ipynb) to curvilinear coordinates. \n",
+    "\n",
+    "Consider for example *ordinary* (as opposed to, e.g., logarithmic-radial) spherical coordinates. In these coordinates, we choose a *uniform* grid in $(x_0,x_1,x_2)=(r,\\theta,\\phi)$.\n",
+    "+ Unlike Cartesian coordinates, in which our uniform numerical grids with coordinates $(x_0,x_1,x_2)=(x,y,z)$ will generally extend from arbitrary ranges $x_i \\in [x_{i, \\rm min},x_{i, \\rm max}]$, spherical coordinates will range from \n",
+    "    + $x_0 = r \\in [0,{\\rm RMAX}]$, \n",
+    "    + $x_1 = \\theta \\in [0,\\pi]$, and\n",
+    "    + $x_2 = \\phi \\in [-\\pi,\\pi]$. (Notice how we do not choose $x_2= \\phi \\in [0,2\\pi]$ so that our conversion from Cartesian to spherical coordinates is compatible with the output range from the ${\\rm atan2}(y,x)$ function: $\\phi={\\rm atan2}(y,x)\\in[-\\pi,\\pi]$.)\n",
+    "+ Also, unlike Cartesian coordinates, the boundaries of our grid $x_i \\in [x_{i, \\rm min},x_{i, \\rm max}]$ in spherical coordinates are not all outer boundaries. This presents some additional challenges, as we must fill in ghost zones in regions $x_i < x_{i,\\rm min}$ and $x_i > x_{i, \\rm max}$. While in Cartesian coordinates, these ghost zones map to regions outside the grid domain $x_i \\in [x_{i, \\rm min},x_{i, \\rm max}]$, in spherical coordinates, most ghost zones map to regions *inside* the grid domain. E.g., the ghost zone point $(r,\\theta,2\\pi+\\Delta \\phi/2)$ would map to the interior point $(r,\\theta,\\Delta \\phi/2)$ because the $\\phi$ coordinate is periodic. Thus we are faced with the problem of addressing the following two questions:\n",
+    "    1. Does a given ghost zone map to an interior point, or is it an outer boundary point (i.e., a point exterior to the domain)?\n",
+    "    1. If the ghost zone maps to an interior point, to which interior point does it map?\n",
+    "\n",
+    "We address the above two questions via the following three-step process:\n",
+    "1. Convert the coordinate $(x_0,x_1,x_2)$ for the ghost zone point to Cartesian coordinates $\\left(x(x_0,x_1,x_2),y(x_0,x_1,x_2),z(x_0,x_1,x_2)\\right)$. For example, if we choose ordinary spherical coordinates $(x_0,x_1,x_2)=(r,\\theta,\\phi)$\n",
+    "1. blah\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -126,6 +170,8 @@
    "metadata": {},
    "source": [
     "## Basic C Code Infrastructure\n",
+    "\n",
+    "Moving to curvilinear coordinates\n",
     "\n",
     "Next we will write the C code infrastructure necessary to make use of the above NRPy+-generated codes. Again, we'll be using RK4 time integration via the Method of Lines."
    ]
