--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -13,24 +13,7 @@
     "\n",
     "# NRPy+ Tutorial\n",
     "\n",
-    "**[Zachariah B. Etienne](http://math.wvu.edu/~zetienne/)** $\\leftarrow$ Please feel free to email comments, revisions, or errata!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction & Motivation\n",
-    "\n",
-    "**[NRPy+](http://blackholesathome.net)** (\"Python-based code generation for numerical relativity... and beyond!\") is a Python-based package for generating highly optimized C code for finite-difference representations of [hyperbolic](https://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation) and [parabolic](https://en.wikipedia.org/wiki/Parabolic_partial_differential_equation) partial differential equations.\n",
-    "\n",
-    "Users may input complex expressions that appear in these equations in [clean tensorial form](https://en.wikipedia.org/wiki/Einstein_notation), which acts to **minimize human error**. **NRPy+** processes this input, **outputting highly-optimized C code with [CSE](https://en.wikipedia.org/wiki/Common_subexpression_elimination) and/or [SIMD](https://en.wikipedia.org/wiki/Advanced_Vector_Extensions) [compiler intrinsics](https://en.wikipedia.org/wiki/Intrinsic_function) if desired**.\n",
-    "\n",
-    "**NRPy+** is designed to **lower the barrier to entry** for new users, requiring **no expensive [Mathematica](http://www.wolfram.com/mathematica/) or [Maple](https://www.maplesoft.com/products/Maple/) license to function**. Instead, it makes extensive use of the powerful, open-source [SymPy](http://sympy.org) as its [computer algebra system](https://en.wikipedia.org/wiki/Computer_algebra_system) back-end.\n",
-    "\n",
-    "Though it was originally designed to greatly **accelerate software development** for [numerical relativity](https://en.wikipedia.org/wiki/Numerical_relativity) (i.e., solving Einstein's equations of general relativity on the computer), **NRPy+** can be used to rapidly develop software to solve much broader classes of [hyperbolic](https://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation) and [parabolic](https://en.wikipedia.org/wiki/Parabolic_partial_differential_equation) partial differential equations with finite difference approaches.\n",
-    "\n",
-    "## NRPy+ Tutorial Modules\n",
+    "**[Zachariah B. Etienne](http://math.wvu.edu/~zetienne/)** $\\leftarrow$ Please feel free to email comments, revisions, or errata! **Read the [NRPy+ Introduction/Motivation](https://blackholesathome.net) first, if you have not done so already.**\n",
     "### PART 1: Basic Functionality of NRPy+, a First Application\n",
     "##### NRPy+ Basics\n",
     "+ [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
@@ -64,7 +47,7 @@
     "+ Application: [The Scalar Wave Equation in Curvilinear Coordinates, using a Reference Metric](Tutorial-ScalarWaveCurvilinear.ipynb)\n",
     "+ Application: [Maxwell's Equations in Curvilinear Coordinates, using a Reference Metric](Tutorial-MaxwellCurvilinear.ipynb) (*Courtesy Ian Ruchlin*)\n",
     "+ Application: [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSNCurvilinear.ipynb)\n",
-    "    + Application (in progress) [Adding the $8\\pi T^{\\mu\\nu}$ source terms to the BSSN Equations](Tutorial-BSSNCurvilinear_Plus_Matter_Sources.ipynb)"
+    "    + Application (in progress) [Adding the $8\\pi T^{\\mu\\nu}$ source terms to the BSSN Equations](Tutorial-BSSNCurvilinear_Plus_Matter_Sources.ipynb)\n"
    ]
   }
  ],
