NRPy+ tutorial main page: Remove redundant intro/motivation. Instead link to the official website.

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -13,9 +13,11 @@
     "\n",
     "# NRPy+ Tutorial\n",
     "\n",
-    "**[Zachariah B. Etienne](http://math.wvu.edu/~zetienne/)** $\\leftarrow$ Please feel free to email comments, revisions, or errata! **Read the [NRPy+ Introduction/Motivation](https://blackholesathome.net) first, if you have not done so already.**\n",
+    "**[Zachariah B. Etienne](http://math.wvu.edu/~zetienne/)** $\\leftarrow$ Please feel free to email comments, revisions, or errata! \n",
+    "\n",
     "### PART 1: Basic Functionality of NRPy+, a First Application\n",
     "##### NRPy+ Basics\n",
+    "+ [NRPy+: Introduction & Motivation](https://blackholesathome.net/) (BlackHoles@Home web page)\n",
     "+ [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "+ [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
     "+ [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
