Tutorial-Start_to_Finish-ScalarWaveCurvilinear: More documentation

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -122,18 +122,37 @@
     "\n",
     "There are several subtleties when generalizing the [start-to-finish scalar wave tutorial in Cartesian coordinates](Tutorial-Start_to_Finish-ScalarWave.ipynb) to curvilinear coordinates. \n",
     "\n",
-    "Consider for example *ordinary* (as opposed to, e.g., logarithmic-radial) spherical coordinates. In these coordinates, we choose a *uniform* grid in $(x_0,x_1,x_2)=(r,\\theta,\\phi)$. That is to say, we sample $r$, $\\theta$, and $\\phi$ uniformly within their bounds.\n",
-    "+ Unlike Cartesian coordinates, in which our uniform numerical grids with coordinates $(x_0,x_1,x_2)=(x,y,z)$ will generally extend from arbitrary ranges $x_i \\in [x_{i, \\rm min},x_{i, \\rm max}]$, spherical coordinates will range from \n",
-    "    + $x_0 = r \\in [0,{\\rm RMAX}]$, \n",
+    "Consider for example *ordinary* (as opposed to, e.g., logarithmic-radial) spherical coordinates. In these coordinates, we choose a *uniform* grid in $(x_0,x_1,x_2)=(r,\\theta,\\phi)$. That is to say, we choose *constant* spacing $\\Delta r$, $\\Delta \\theta$, and $\\Delta \\phi$ between grid points in $r$, $\\theta$, and $\\phi$, respectively.\n",
+    "\n",
+    "+ Unlike Cartesian coordinates, in which our computational domain with coordinates $(x_0,x_1,x_2)=(x,y,z)$ may extend over arbitrary coordinate ranges $x_i \\in [x_{i, \\rm min},x_{i, \\rm max}]$, our spherical coordinate domains will satisfy\n",
+    "\n",
+    "    + $x_0 = r \\in [0,{\\rm RMAX}]$,\n",
     "    + $x_1 = \\theta \\in [0,\\pi]$, and\n",
     "    + $x_2 = \\phi \\in [-\\pi,\\pi]$. (Notice how we do not choose $x_2= \\phi \\in [0,2\\pi]$ so that our conversion from Cartesian to spherical coordinates is compatible with the output range from the ${\\rm atan2}(y,x)$ function: $\\phi={\\rm atan2}(y,x)\\in[-\\pi,\\pi]$.)\n",
-    "+ Also, unlike Cartesian coordinates, the boundaries of our grid $x_i \\in [x_{i, \\rm min},x_{i, \\rm max}]$ in spherical coordinates are not all outer boundaries. This presents some additional challenges, as we must fill in ghost zones in regions $x_i < x_{i,\\rm min}$ and $x_i > x_{i, \\rm max}$. While in Cartesian coordinates, these ghost zones map to regions outside the grid domain $x_i \\in [x_{i, \\rm min},x_{i, \\rm max}]$, in spherical coordinates, most ghost zones map to regions *inside* the grid domain. E.g., the ghost zone point $(r,\\theta,2\\pi+\\Delta \\phi/2)$ would map to the interior point $(r,\\theta,\\Delta \\phi/2)$ because the $\\phi$ coordinate is periodic. Thus we are faced with the problem of addressing the following two questions:\n",
-    "    1. Does a given ghost zone map to an interior point, or is it an outer boundary point (i.e., a point exterior to the domain)?\n",
-    "    1. If the ghost zone maps to an interior point, to which interior point does it map?\n",
     "\n",
-    "We address the above two questions via the following three-step process:\n",
-    "1. Convert the coordinate $(x_0,x_1,x_2)$ for the ghost zone point to Cartesian coordinates $\\left(x(x_0,x_1,x_2),y(x_0,x_1,x_2),z(x_0,x_1,x_2)\\right)$. For example, if we choose ordinary spherical coordinates $(x_0,x_1,x_2)=(r,\\theta,\\phi)$\n",
-    "1. blah\n"
+    "+ Further, most non-Cartesian, orthogonal coordinate systems (like spherical coordinates) possess *coordinate singularities*. Coordinate singularities in spherical coordinates lie along $\\theta=0$ and $\\theta=\\pi$; these are points where the coordinate system focuses to a single point. For example, the coordinate singularity at the North Pole is the reason why all directions are south there. Critically, these singularities manifest as points where the reference metric or its inverse crosses through zero or diverges to $\\infty$. As we derived in a [previous module](Tutorial-ScalarWaveCurvilinear.ipynb), the Laplacian in spherical polar coordinates takes the form\n",
+    "$$\n",
+    "\\nabla^2 u = \\partial_r^2 u + \\frac{1}{r^2} \\partial_\\theta^2 u + \\frac{1}{r^2 \\sin^2 \\theta} \\partial_\\phi^2 u +  \\frac{2}{r} \\partial_r u + \\frac{\\cos\\theta}{r^2 \\sin\\theta} \\partial_\\theta u,\n",
+    "$$\n",
+    "which diverges at $r=0$ and $\\sin\\theta=0-$precisesly at the $\\theta=0$ and $\\theta=\\pi$ coordinate singularity. To avoid this divergence, we simply choose that our numerical grids be *cell-centered*. For example, if we choose a numerical grid with 2 outer ghost zone points (needed due to 4th-order-accurate centered finite differencing), and we want the grid interior to be sampled with ${\\rm Nr}\\times{\\rm Ntheta}\\times{\\rm Nphi}$ grid points, then the cell-centered grid points can be indexed via three integers $(\\rm{i0}\\in[0,{\\rm Nr}+4),\\rm{i1}\\in[0,{\\rm Ntheta}+4),\\rm{i2}\\in[0,{\\rm Ntheta}+4))$:\n",
+    "    + $r_{\\rm i0}      = r_{\\rm min}      + \\left({\\rm i0} + \\frac{1}{2}\\right)\\Delta r$, where $r_{\\rm min}=\\left(-2+\\frac{1}{2}\\right)\\Delta r$;\n",
+    "    + $\\theta_{\\rm i1} = \\theta_{\\rm min} + \\left({\\rm i1} + \\frac{1}{2}\\right)\\Delta \\theta$, where $\\theta_{\\rm min}=\\left(-2+\\frac{1}{2}\\right)\\Delta \\theta$; and\n",
+    "    + $\\phi_{\\rm i2}   = \\phi_{\\rm min}   + \\left({\\rm i2} + \\frac{1}{2}\\right)\\Delta \\phi$, where $\\phi_{\\rm min}=\\left(-2+\\frac{1}{2}\\right)\\Delta \\phi$.\n",
+    "\n",
+    "+ Unlike Cartesian coordinates, the boundaries of our grid $x_i \\in [x_{i, \\rm min},x_{i, \\rm max}]$ in spherical coordinates are not all outer boundaries. This presents some additional challenges, as finite difference numerical grids of $N$th order accuracy generally possess $N/2$ *ghost zone points* in regions $x_i < x_{i,\\rm min}$ and $x_i > x_{i, \\rm max}$. While in Cartesian coordinates, these ghost zone points map to regions outside the grid domain $x_i \\in [x_{i, \\rm min},x_{i, \\rm max}]$, in spherical coordinates, most ghost zone points map to regions *inside* the grid domain. For example, for some $\\tilde{r}\\in [0,{\\rm RMAX}]$ and $\\tilde{\\theta}\\in[0,\\pi]$, the ghost zone point $(\\tilde{r},\\tilde{\\theta},2\\pi+\\Delta \\phi/2)$ would map to the interior point $(\\tilde{r},\\tilde{\\theta},\\Delta \\phi/2)$ because the $\\phi$ coordinate is periodic. Thus when given a ghost zone point in some non-Cartesian coordinate system, we are faced with the problem of addressing the following two questions:\n",
+    "    1. Does a given ghost point map to an interior point, or is it an outer boundary point (i.e., a point exterior to the domain)?\n",
+    "    1. If the ghost zone point maps to an interior point, to which interior point does it map?\n",
+    "\n",
+    "We handle ghost zone points on the domain boundary in generic coordinate systems via the following, simple three-step process at each ghost zone point:\n",
+    "1. Convert the coordinate $(x_0,x_1,x_2)$ for the ghost zone point to Cartesian coordinates $\\left(x(x_0,x_1,x_2),y(x_0,x_1,x_2),z(x_0,x_1,x_2)\\right)$. For example, if we choose ordinary spherical coordinates $(x_0,x_1,x_2)=(r,\\theta,\\phi)$, then\n",
+    "    + $x(r,\\theta,\\phi) = r \\sin(\\theta) \\cos(\\phi) = x_0 \\sin(x_1) \\cos(x_2)$\n",
+    "    + $y(r,\\theta,\\phi) = r \\sin(\\theta) \\sin(\\phi) = x_0 \\sin(x_1) \\sin(x_2)$\n",
+    "    + $z(r,\\theta,\\phi) = r \\cos(\\theta)            = x_0 \\cos(x_1)$\n",
+    "1. Once we have $(x,y,z)$, we then find the corresponding value $(x_0,x_1,x_2)_{\\rm in}=(r,\\theta,\\phi)_{\\rm in}$ *in the grid interior*, via the simple inverse formula:\n",
+    "    + $r_{\\rm in}      = x_0 = \\sqrt{x^2+y^2+z^2} \\in [0,\\infty)$\n",
+    "    + $\\theta_{\\rm in} = x_1 = {\\rm acos}\\left(\\frac{z}{\\sqrt{x^2+y^2+z^2}}\\right) \\in [0,\\pi]$\n",
+    "    + $\\phi_{\\rm in}   = x_2 = {\\rm atan2}(y,x) \\in [-\\pi,\\pi]$ [Wikipedia article on atan2()](https://en.wikipedia.org/w/index.php?title=Atan2&oldid=859313982)\n",
+    "1. Then the grid index "
    ]
   },
   {
