--- a/Tutorial-EinsteinsEquations__Brill-Lindquist_Initial_Data.ipynb
+++ b/Tutorial-EinsteinsEquations__Brill-Lindquist_Initial_Data.ipynb
@@ -37,6 +37,7 @@
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
     "import grid as gri\n",
+    "from outputC import *\n",
     "#import BSSN_InitialData__ADMquantities as ADM"
    ]
   },
@@ -63,11 +64,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x0,x1,x2 = par.Cparameters(\"REAL\",thismodule,[\"x0\",\"x1\",\"x2\"])\n",
+    "x,y,z = par.Cparameters(\"REAL\",thismodule,[\"x\",\"y\",\"z\"])\n",
     "\n",
     "psi = sp.sympify(1)\n",
-    "psi += BH1_mass / ( 2 * sp.sqrt((x0-BH1_posn_x)**2 + (x1-BH1_posn_y)**2 + (x2-BH1_posn_z)**2) )\n",
-    "psi += BH2_mass / ( 2 * sp.sqrt((x0-BH2_posn_x)**2 + (x1-BH2_posn_y)**2 + (x2-BH2_posn_z)**2) )\n",
+    "psi += BH1_mass / ( 2 * sp.sqrt((x-BH1_posn_x)**2 + (y-BH1_posn_y)**2 + (z-BH1_posn_z)**2) )\n",
+    "psi += BH2_mass / ( 2 * sp.sqrt((x-BH2_posn_x)**2 + (y-BH2_posn_y)**2 + (z-BH2_posn_z)**2) )\n",
+    "\n",
+    "with open(\"BSSN/BrillLindquist.h\",\"w\") as file:\n",
+    "    file.write(\"REAL BrillLindquistPsi(const REAL x,const REAL y,const REAL z) {\\n\")\n",
+    "    file.write(\"REAL psi;\\n\")\n",
+    "    file.write(outputC(psi,\"psi\",\"returnstring\"))\n",
+    "    file.write(\"return psi;\\n\")\n",
+    "    file.write(\"}\")\n",
     "\n",
     "# for i in range(DIM):\n",
     "#     for j in range(DIM):\n",
@@ -95,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
